# rust_mpc

./: .gitignore  Cargo.toml  README.md  plot_traj.py
app/: Cargo.toml  plot_traj.py
app/src/: main.rs
erik_dual/: Cargo.toml
erik_dual/src/: lib.rs
mpc/: Cargo.toml
mpc/src/: lib.rs
named_vec_ops/: Cargo.toml
named_vec_ops/src/: lib.rs
named_vec_ops_derive/: Cargo.toml
named_vec_ops_derive/src/: lib.rs
